Bug 3762 - via-usb2: can
Summary: via-usb2: can
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Interrupts (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Len Brown
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-11-17 16:02 UTC by Steffen Schwientek
Modified: 2004-12-05 19:40 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.9
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
output of lspci (8.46 KB, text/plain)
2004-11-27 17:52 UTC, Steffen Schwientek
Details
the interrupts (485 bytes, text/plain)
2004-11-27 18:03 UTC, Steffen Schwientek
Details
dmesg output (4.80 KB, text/plain)
2004-11-27 18:14 UTC, Steffen Schwientek
Details
patch applied to acpi test tree (612 bytes, patch)
2004-11-30 21:48 UTC, Len Brown
Details | Diff

Description Steffen Schwientek 2004-11-17 16:02:58 UTC
Distribution:Gentoo 
Hardware:Via-Epia M9000 
USB-2 Chipset 
:0000:00:10.3 USB Controller: VIA Technologies, Inc. USB 2.0 (rev 82) 
 
 
I have an USB-burner (usb-2), but the kernel can
Comment 1 Andrew Morton 2004-11-17 20:35:34 UTC
I'll add this to my list of things-to-fix-for-2.6.10.  Please
let me know if it gets fixed or is deemed not-a-bug, thanks.
Comment 2 David Brownell 2004-11-18 21:27:18 UTC
Nothing changed recently in how usbcore or EHCI manage IRQs, so 
this sure looks like an IRQ assignment issue ... if EHCI 
actually got the IRQ it requested, there'd be no problem. 
 
There are way too many options about how IRQs get assigned.  I'd 
hope one of them would resolve this issue.  See what the 
Documentation/* files have to suggest. 
 
Seems like not-a-USB-bug ... I'll reassign it unless evidence 
shows up that the root cause is USB. 
 
But the report should also get updated to report behavior with 
the 2.6.10-rc2 tree (or more recent bk snapshot).  Also basics 
like "lspci -vv" and "cat /proc/interrupts", and the boot logs 
showing how (and why) specific IRQs got assigned. 
 
 
Comment 3 David Brownell 2004-11-25 12:01:40 UTC
Erm, updates please?  Does 2.6.10-rc2-bk have this 
problem still?  I'm re-categorizing this IRQ routing 
issue to ACPI. 
Comment 4 Steffen Schwientek 2004-11-27 17:52:32 UTC
Created attachment 4157 [details]
output of lspci
Comment 5 Steffen Schwientek 2004-11-27 18:03:11 UTC
Created attachment 4158 [details]
the interrupts

output od the interrups
Comment 6 Steffen Schwientek 2004-11-27 18:14:25 UTC
Created attachment 4159 [details]
dmesg output

The dmesg output before inserting the burner...

I I plug in the burner, dmesg adds
usb 1-1: new high speed USB device using ehci_hcd and address 5
ehci_hcd 0000:00:10.3: Unlink after no-IRQ?  Different ACPI or APIC settings
may help.
usb 1-1: khubd timed out on ep0i

If I detach the burner, sometimes my system freeze completely.
Comment 7 Shaohua 2004-11-28 17:58:56 UTC
Yes, indead. It's an ACPI bug. One patch from mine updated a big value for 
legacy IRQ penalty. Changing to a small value for IRQ penalty would fix it.
Please use below workaround till we get a real fix.

in 2.6/drivers/acpi/pci_link.c
void acpi_penalize_isa_irq(int irq)
{
-	acpi_irq_penalty[irq] += PIRQ_PENALTY_ISA_USED;
+       acpi_irq_penalty[irq] += 0;
}
Comment 8 Andrew Morton 2004-11-29 16:21:55 UTC
Gents, did the workaround fix things, and are we likely to have a permanent
fix in place for 2.6.10?

Thanks.
Comment 9 Len Brown 2004-11-30 21:48:04 UTC
Created attachment 4181 [details]
patch applied to acpi test tree

please confirm that this patch fixes the problem.
Comment 10 Len Brown 2004-12-05 19:40:21 UTC
shipped in 2.6.10-rc3 
closing. 

Note You need to log in before you can comment on or make changes to this bug.