[ACPI] fix IRQ assignment regression with CONFIG_PNPACPI=y http://bugzilla.kernel.org/show_bug.cgi?id=3762

Signed-off-by: Len Brown <len.brown@intel.com>