drivers/acpi/pci_link.c
@@ -2721,6 +2721,7 @@ r_return
 l_int|1
 suffix:semicolon
 )brace
+multiline_comment|/*&n; * We&squot;d like PNP to call this routine for the&n; * single ISA_USED value for each legacy device.&n; * But instead it calls us with each POSSIBLE setting.&n; * There is no ISA_POSSIBLE weight, so we simply use&n; * the (small) PCI_USING penalty.&n; */
 DECL|function|acpi_penalize_isa_irq
 r_void
 id|acpi_penalize_isa_irq
@@ -2735,7 +2736,7 @@ id|acpi_irq_penalty
 id|irq
 )braket
 op_add_assign
-id|PIRQ_PENALTY_ISA_USED
+id|PIRQ_PENALTY_PCI_USING
 suffix:semicolon
 )brace
 multiline_comment|/*&n; * Over-ride default table to reserve additional IRQs for use by ISA&n; * e.g. acpi_irq_isa=5&n; * Useful for telling ACPI how not to interfere with your ISA sound card.&n; */
